Trying to make connection work
Still looking at this, not getting very far :(