@@ -33,8 +33,15 @@ public class startRemotePeers {
             for (int i = 0; i < numPeers; i++) {
                 System.out.println("Start remote peer " + peerInfoReader.getPeerIDS(i) +  " at " + peerInfoReader.getPeerHostNames(i) );
 
-                //Runtime.getRuntime().exec("ssh " + peerInfoReader.getPeerHostNames(i) + " cd " + path + "; java peerProcess " + peerInfoReader.getPeerIDS(i));
-                Runtime.getRuntime().exec("java peerProcess " + peerInfoReader.getPeerIDS(i));
+                //the line below is what is supposed to work to connect to ssh
+                Runtime.getRuntime().exec("ssh " + peerInfoReader.getPeerHostNames(i) + " cd " + path + "; java peerProcess " + peerInfoReader.getPeerIDS(i));
+
+                //the lines below is playing with stuff to see if I can get it to just run on our machines for the time being
+                //Runtime.getRuntime().exec("java peerProcess " + peerInfoReader.getPeerIDS(i));
+                /*ProcessBuilder pb = new ProcessBuilder("cmd.exe", "java peerProcess " + peerInfoReader.getPeerIDS(i));
+                Process process = pb.start();
+                process.waitFor();*/
+                //Process myProcess = Runtime.getRuntime().exec("peerProcess.java " + peerInfoReader.getPeerIDS(i));
             }
             System.out.println("All remote peers started." );
 
